# doxypypyplantuml

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  run.py
src/doxypypyplantuml/: doxypypyplantuml.py
tests/: fake_input_file.py  test_doxypypyplantuml.py
tests/test_doxypypyplantuml_resources/: expected_output_file.py  fake_input_file.py
