[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doxypypyplantuml"
version = "1.0.0"
authors = [
  { name="Stef van Son", email="8822160+stefvanson@users.noreply.github.com" },
]
description = "A package that fixes PlantUML diagrams that doxypypy screws up."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "doxypypy",
    "Doxygen",
    "PlantUML",
]

[project.urls]
"Homepage" = "https://github.com/stefvanson/doxypypyplantuml"
"Bug Tracker" = "https://github.com/stefvanson/doxypypyplantuml/issues"